app/manifests.3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: main
          image: localhost:5000/app:latest
      #     volumeMounts:
      #       - mountPath: "/data"
      #         name: data
      # volumes:
      #   - name: data
      #     persistentVolumeClaim:
      #       claimName: data
